[fix] Print iframe is now actually invisible

--- a/www/assets/css/app/app.scss
+++ b/www/assets/css/app/app.scss
@@ -365,9 +365,7 @@ header{
 // Question view
 
 #printContainer{
-  width: 0;
-  height: 0;
-  z-index: -100;
+  display: none;
 }
 
 #content .questionView{
